--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
   position: absolute;
   border: 2px solid black;
   background-color: black;
-  height: 10px;
-  width:10px;
+  height: 50px;
+  width:50px;
 }
 body{
-  margin = 0;
+  margin: 0px;
 }
